--- a/package.json
+++ b/package.json
@@ -35,23 +35,27 @@
     "tmx-parser": "^1.4.0"
   },
   "devDependencies": {
-    "babelify": "^6.1.3",
-    "browser-sync": "^2.2.4",
-    "browserify": "^9.0.3",
+    "ansi-colors": "^4.1.3",
+    "babelify": "^10.0.0",
+    "beeper": "^3.0.0",
+    "browser-sync": "^1.3.7",
+    "browserify": "^17.0.1",
     "chai": "^1.10.0",
-    "gulp": "^3.8.11",
-    "gulp-jshint": "^1.11.2",
-    "gulp-notify": "^2.2.0",
-    "gulp-util": "^3.0.4",
+    "fancy-log": "^2.0.0",
+    "gulp": "^5.0.0",
+    "gulp-jshint": "^2.1.0",
+    "gulp-notify": "^5.0.0",
+    "gulp-util": "^1.0.0",
     "jshint-stylish": "^1.0.1",
     "lodash.assign": "^3.2.0",
     "lodash.omit": "^3.1.0",
     "map-stream": "0.0.5",
-    "mocha": "^2.1.0",
+    "mocha": "^11.1.0",
     "pretty-hrtime": "^1.0.0",
     "require-dir": "^0.1.0",
+    "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^2.4.0"
+    "watchify": "^4.0.0"
   },
   "engines": {
     "node": "4.2.x"
